# kattes-hem

./: .gitignore  .prettierrc  header.css  index.css  index.html  index.js  katte-users.json  pet-project.css  pet-project.html  pet-project.js  start.sh  todo  utils.js
backend/: pyproject.toml
backend/backend/: main.py
personer/: profile.css  profile.html  profile.js
public/: header.css  index.js  katte-users.json  utils.js
public/emotes/: emotes.css  emotes.html  emotes.js
public/personer/: profile.css  profile.html
