[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Hannes Wadman",email = "hannes.wadman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
